data/derived/comb/progs/unify/prog1112.ml.out
Characters 51-54:
  let fixpoint (f,b) = wwhile(let g x = (f x) = x in g b, b);;
                                                     ^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
